<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ingresofondi"
    tools:context=".loginActivity">

    <RelativeLayout
        android:layout_width="379dp"
        android:layout_height="534dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="172dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="16dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/logoingre" />

        <RelativeLayout
            android:layout_width="345dp"
            android:layout_height="260dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="14dp"
            android:layout_marginBottom="22dp"
            android:background="@drawable/amarillo">

            <EditText
                android:id="@+id/emal_login"
                style="@style/Widget.AppCompat.EditText"
                android:layout_width="241dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="27dp"
                android:background="@drawable/input"
                android:drawableLeft="@drawable/email"
                android:hint="@string/title_email"
                android:inputType="textEmailAddress"
                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/passw_login"
                android:layout_width="241dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/emal_login"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="12dp"
                android:background="@drawable/input"
                android:drawableLeft="@drawable/password"
                android:hint="@string/title_password"
                android:inputType="textPassword"
                android:textAlignment="textStart"
                android:textSize="18sp" />

            <Button
                android:id="@+id/ingresar_btn"
                android:layout_width="132dp"
                android:layout_height="40dp"
                android:layout_above="@+id/no_acoount"
                android:layout_below="@+id/passw_login"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="19dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/ingresar" />

            <TextView
                android:id="@+id/no_acoount"
                android:layout_width="241dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="68dp"
                android:layout_marginEnd="65dp"
                android:layout_marginBottom="77dp"
                android:background="@drawable/inputyet"
                android:text="@string/no_user_count"
                android:textAlignment="center"
                android:textSize="15sp" />

            <Button
                android:id="@+id/gmail_login"
                android:layout_width="18dp"
                android:layout_height="20dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="163dp"
                android:layout_marginEnd="164dp"
                android:layout_marginBottom="17dp"
                android:background="@drawable/googleg_standard_color_18" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/gmail_login"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="7dp"
                android:text="@string/title_ingresar_con" />
        </RelativeLayout>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="200dp"
            android:layout_height="36dp"
            android:layout_below="@+id/imageView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/title_ini"
            android:textAlignment="center"
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            android:textSize="24sp" />
    </RelativeLayout>


</RelativeLayout>