<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondoregistro"
    tools:context=".registroActivity">

    <RelativeLayout
        android:layout_width="356dp"
        android:layout_height="525dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="26dp">

        <RelativeLayout
            android:layout_width="346dp"
            android:layout_height="289dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="0dp"
            android:layout_marginBottom="23dp"
            android:background="@drawable/amarillo">

            <EditText
                android:id="@+id/email_reg"
                android:layout_width="241dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="60dp"
                android:layout_marginTop="46dp"
                android:layout_marginEnd="57dp"
                android:background="@drawable/input"
                android:contentDescription="@string/title_email"
                android:drawableLeft="@drawable/email"
                android:hint="@string/title_email"
                android:inputType="textEmailAddress"
                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/comfirpas"
                android:layout_width="239dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/pasw_reg"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="60dp"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="59dp"
                android:background="@drawable/input"
                android:drawableLeft="@drawable/password"
                android:hint="@string/title_comfir_password"
                android:inputType="textPassword"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/pasw_reg"
                android:layout_width="241dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/email_reg"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="59dp"
                android:layout_marginTop="19dp"
                android:layout_marginEnd="58dp"
                android:background="@drawable/input"
                android:drawableLeft="@drawable/password"
                android:hint="@string/title_password"
                android:inputType="textPassword"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btn_regis"
                android:layout_width="176dp"
                android:layout_height="60dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="97dp"
                android:layout_marginEnd="94dp"
                android:layout_marginBottom="40dp"
                android:background="@drawable/registrars" />

        </RelativeLayout>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="154dp"
            android:layout_height="145dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/logoingre" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_below="@+id/imageView2"
            android:layout_centerHorizontal="true"
            android:text="@string/title_ini"
            android:textColor="@color/common_google_signin_btn_text_dark_pressed"
            android:textSize="24sp" />


    </RelativeLayout>


</RelativeLayout>